[package]
name = "flipper-pc-monitor-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serialport = "4.0"
btleplug = "0.10.5"
uuid = { version = "1.4", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3"
nvml-wrapper = "0.11.0"
sysinfo = { version = "0.28" }
pretty_env_logger = "0.5"
xmltojson = { git = "https://github.com/rtyler/xmltojson" }
wmi = "0.13"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"